--- a/css/main.css
+++ b/css/main.css
@@ -1,13 +1,16 @@
-html, body {
-  width: 100%;
-  height: 100%;
-}
-
 #root {
   display: flex;
   justify-content: center;
   align-items: center;
+  overflow: hidden;
 
+  width: 100%;
+  height: 100%;
+
+  margin: 0;
+}
+
+#sketch-container {
   width: 100%;
   height: 100%;
 }
